# Mirror-Down-Detector

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake/: fetch_deps.cmake
include/: background.hpp  bot.hpp  ping.hpp  readFile.hpp
include/mirror/down_detector/: background.hpp  bot.hpp  http.hpp  ping.hpp  readFile.hpp
resources/: .gitignore
src/: CMakeLists.txt  background.cpp  bot.cpp  http.cpp  main.cpp  ping.cpp  readFile.cpp  readFile.h
